# exview

./: Cargo.toml  Dockerfile  README.md  flake.nix
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
src/: main.rs  mod.rs
src/backend/: mod.rs  user.rs
src/backend/domains/: alarm.rs  drilldown.rs  mod.rs  user.rs
src/backend/logrythm/: alert.rs  drilldown.rs  logrythm_api_handler.rs  mod.rs
src/backend/repos/: logrythm.rs  mod.rs
src/gui/: graphics_interface.rs  mod.rs
